welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: ')' expected but integer literal found.
  if (temp 1 <0 && temp2 > 100){
           ^icyHot:11: error: illegal start of simple expression
} 
^