welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
  if (temp 1 <0 && temp2 > 100){
    return true
  }
  else if (temp2<0 && temp2> 100){
    return true
  }
  else {
    return false
  }
}